Fixed z-indexing, removed mp4 file and reformatted code.

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,14 @@
 @font-face {
-    font-family: 'Smooch';
+    font-family: "Smooch";
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(https://fonts.gstatic.com/s/smooch/v7/o-0LIps4xW8U1xUxiaB-.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    src: url(https://fonts.gstatic.com/s/smooch/v7/o-0LIps4xW8U1xUxiaB-.woff2)
+        format("woff2");
+    unicode-range:
+        U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
+        U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+        U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 :root {
@@ -19,7 +23,7 @@
 }
 
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 html {
@@ -56,7 +60,7 @@ video {
     min-width: 100vw;
     min-height: 100vh;
 
-    z-index: -1;
+    z-index: 0;
 }
 
 div {
@@ -68,6 +72,7 @@ div {
     justify-content: center;
 
     gap: 10px;
+    z-index: 1;
 }
 
 h1 {
@@ -75,14 +80,18 @@ h1 {
 
     color: var(--Text-Color);
 
-    font-family: 'Smooch', cursive;
+    font-family: "Smooch", cursive;
     font-size: 5vw;
 
     margin: 0;
     padding: 0;
 
     text-align: center;
-    text-shadow: 0 0 10px var(--Inner-Glow), 0 0 20px var(--Inner-Glow), 0 0 30px var(--Outer-Glow), 0 0 40px var(--Outer-Glow);
+    text-shadow:
+        0 0 10px var(--Inner-Glow),
+        0 0 20px var(--Inner-Glow),
+        0 0 30px var(--Outer-Glow),
+        0 0 40px var(--Outer-Glow);
 }
 
 input[type="button"] {
